--- a/googlemap/comment_integrer_en_iframe.html
+++ b/googlemap/comment_integrer_en_iframe.html
@@ -9,9 +9,8 @@
 		<script type="text/javascript">
 
 
-			var ADR = "Wault (quai du) 17 ; Barre (rue de la)";
-			var COM = "Lille";
-			document.write("<iframe src=\"./google_map.html?ADR="+ADR+"&COM="+COM+"\" width=\"1555\" height=\"1500\"> Sorry your browser does not support inline frames. </iframe>");
+		var REF = "PA00116132";
+		document.write("<iframe src=\"./google_map.html?REF="+REF+"\" width=\"1500\" height=\"1500\"> Sorry your browser does not support inline frames. </iframe>");
 		</script>
 	</body>
 </html>
